--- a/cv.html
+++ b/cv.html
@@ -93,7 +93,7 @@
 
 	   <div class="text">
 		 
-		  <img class="picture" src="Profile.JPG">
+		  <img class="picture" src="Profile.jpg">
 
 	   </div>
 
