--- a/cv.html
+++ b/cv.html
@@ -190,21 +190,21 @@
 <div class="Portfolio">
 		
 
-	   <h1> <img id="icon" src=https://cdn3.iconfinder.com/data/icons/education-and-school-8/48/Education-512.png>   Portfolio</h1>
 
+      	   <h1> <img id="icon" src="https://image.flaticon.com/icons/svg/416/416255.svg">   Portfolio</h1>
 
 			
-			<pre><a href="https://apurb0.github.io/Responsive_portfolio/">HTML/CSS</a></pre>
-			<pre><a href="https://apurb0.github.io/Responsive_portfolio_project_1/">psd to Bootstrap</a></pre>
-			<pre><a href="https://apurb0.github.io/PSDtoHTML/index.html">PSDtoHTML</a></pre>
+			<pre><a href="https://apurb0.github.io/Responsive_portfolio/">PSD to HTML with Bootstrap 4</a></pre>
+			<pre><a href="https://apurb0.github.io/Responsive_portfolio_project_2/">psd to Bootstrap</a></pre>
 			<pre><a href="https://apurb0.github.io/PSDtoHTML-2/home.html">Bootstrap</a></pre>
-			<pre><a href="https://productwb.000webhostapp.com/">Wordpress</a></pre>
+			<pre><a href="https://penakiaelm.000webhostapp.com/">Wordpress</a></pre>
 
 
 
 	</div>
 
 	<hr>
+
 
 <div class="Hobbies">
 		
