--- a/cv.html
+++ b/cv.html
@@ -197,7 +197,7 @@
 			<pre><a href="https://apurb0.github.io/Responsive_portfolio_project_1/">PSD to HTML with Bootstrap 4</a></pre>
 			<pre><a href="https://apurb0.github.io/Responsive_portfolio_project_2/">psd to Bootstrap</a></pre>
 			<pre><a href="https://apurb0.github.io/PSDtoHTML-2/home.html">Bootstrap</a></pre>
-			<pre><a href="https://penakiaelm.000webhostapp.com/">Wordpress</a></pre>
+			<pre><a href="https://penakiaelm.000webhostapp.com/">PSD to Wordpress</a></pre>
 
 
 
