--- a/cv.html
+++ b/cv.html
@@ -198,7 +198,7 @@
 			<pre><a href="https://apurb0.github.io/Responsive_portfolio_project_2/">psd to Bootstrap</a></pre>
 			<pre><a href="https://apurb0.github.io/PSDtoHTML-2/home.html">Bootstrap</a></pre>
 			<pre><a href="https://penakiaelm.000webhostapp.com/">PSD to Wordpress using Elementor Pro page builder plugin.</a></pre>
-                        <pre><a href="https://dev-khunkormu.pantheonsite.io/">PSD to Wordpress using Divi page builder theme</a></pre>
+                        <pre><a href="https://dev-business010.pantheonsite.io/">PSD to Wordpress using Divi page builder theme</a></pre>
  
 
 
