--- a/cv.html
+++ b/cv.html
@@ -205,7 +205,26 @@
 	</div>
 
 	<hr>
+		
+		
+<div class="EDUCATION">
+		
 
+	   <h1> <img id="icon" src=https://cdn3.iconfinder.com/data/icons/education-and-school-8/48/Education-512.png>    EDUCATION</h1>
+
+
+			<pre>2006-2011      Motijheel Model High School </pre> 
+
+			<pre>2012-2013      Bangladesh Navy College </pre>
+
+			<pre>2014-2019      United International University </pre>
+
+
+	</div>
+
+	<hr>
+
+		
 
 <div class="Hobbies">
 		
