--- a/cv.html
+++ b/cv.html
@@ -210,15 +210,11 @@
 <div class="EDUCATION">
 		
 
-	   <h1> <img id="icon" src=https://cdn3.iconfinder.com/data/icons/education-and-school-8/48/Education-512.png>    EDUCATION</h1>
+	   <h1> <img id="icon" src=https://cdn3.iconfinder.com/data/icons/education-and-school-8/48/Education-512.png>    University Project</h1>
 
 
-			<pre>2006-2011      Motijheel Model High School </pre> 
-
-			<pre>2012-2013      Bangladesh Navy College </pre>
-
-			<pre>2014-2019      United International University </pre>
-
+			<pre><a href="https://drive.google.com/drive/folders/1QgynG2iwN0khdRoBTA7vmKrNojLx9KBR?usp=sharing">System Analysis and Design Laboratory</a></pre>
+                        <pre><a href="https://drive.google.com/drive/folders/10QTBEDUinH2kz6VcZTmRZ88BFZ2Dq_cL?usp=sharing">Database Management System Laboratory</a></pre>
 
 	</div>
 
