--- a/cv.html
+++ b/cv.html
@@ -211,9 +211,9 @@
 		
 
 	   <h1> <img id="icon" src=https://cdn3.iconfinder.com/data/icons/education-and-school-8/48/Education-512.png>    University Project</h1>
-
-
-			<pre><a href="https://drive.google.com/drive/folders/1QgynG2iwN0khdRoBTA7vmKrNojLx9KBR?usp=sharing">System Analysis and Design Laboratory</a></pre>
+                        
+	                <pre><a href="http://school.jicumollick.com/public/school">Thesis</a></pre>
+                       <pre><a href="https://drive.google.com/drive/folders/1QgynG2iwN0khdRoBTA7vmKrNojLx9KBR?usp=sharing">System Analysis and Design Laboratory</a></pre>
                         <pre><a href="https://drive.google.com/drive/folders/10QTBEDUinH2kz6VcZTmRZ88BFZ2Dq_cL?usp=sharing">Database Management System Laboratory</a></pre>
 
 	</div>
